2005-07-22  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/20303
	* gcc.dg/visibility-d.c: New test.

2005-06-22  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/17965
	* gcc.c-torture/compile/20050622-1.c: New test.

2005-04-12  Jakub Jelinek  <jakub@redhat.com>

	* g++.dg/compat/struct-layout-1_generate.c: In arrays avoid types
	where sizeof (type) < __alignof__ (type).
	* g++.dg/compat/struct-layout-1.h: Likewise.

2005-04-06  Jakub Jelinek  <jakub@redhat.com>

	* g++.dg/compat/struct-layout-1.exp: New file.
	* g++.dg/compat/struct-layout-1.h: New.
	* g++.dg/compat/struct-layout-1_generate.c: New.
	* g++.dg/compat/struct-layout-1_x1.h: New.
	* g++.dg/compat/struct-layout-1_x2.h: New.
	* g++.dg/compat/struct-layout-1_y1.h: New.
	* g++.dg/compat/struct-layout-1_y2.h: New.

2005-11-18  Joseph S. Myers  <joseph@codesourcery.com>

	* g++.dg/cpp/string-2.C: New test.

2005-11-15  Mark Mitchell  <mark@codesourcery.com>

	PR c++/24667
	* g++.dg/warn/Wcast-qual1.C: New test.

2005-11-15  Mark Mitchell  <mark@codesourcery.com>

	PR c++/24687
	* g++.dg/template/crash43.C: Remove duplicate copy of test.

2005-11-14  Mark Mitchell  <mark@codesourcery.com>

	PR c++/24687
	* g++.dg/template/crash43.C: New test. 

2005-11-14  Andreas Tobler  <a.tobler@schweiz.ch>

	Merge from trunk:
	2005-11-11  Andreas Tobler  <a.tobler@schweiz.ch>

	* gfortran.dg/static_linking_1.f: Fix static_libgfortran processing.

	* lib/target-supports.exp (check_effective_target_static_libgfortran):
	Add -static to additional_flags and pass it to target_compile.

2005-11-14  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* gfortran.dg/complex_intrinsic_1.f90: New test.
	* gfortran.dg/complex_intrinsic_2.f90: New test.
	* gfortran.dg/fgetc_1.f90: New test.
	* gfortran.dg/fgetc_2.f90: New test.
	* gfortran.dg/fgetc_3.f90: New test.
	* gfortran.dg/ftell_1.f90: New test.
	* gfortran.dg/ftell_2.f90: New test.
	* gfortran.dg/gnu_logical_1.F: New test.
	* gfortran.dg/gnu_logical_2.f90: New test.
