@@ -1,0 +1,6 @@
+// PR target/17828
+// { dg-do link }
+// { dg-additional-sources " comdat5-aux.cc" }
+// { dg-options "-O2 -fPIC" }
+
+#include "comdat4.C"
