@@ -1,3 +1,9 @@
+2005-07-29  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/17828
+	* g++.old-deja/g++.other/comdat5.C: New test.
+	* g++.old-deja/g++.other/comdat5-aux.cc: New file.
+
 2005-07-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/20303
